Fix invisible images on scroll, shrink hero container and add reveal-on-scroll cleanup.

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -2,7 +2,7 @@
 .hookContainer {
   position: relative;
   width: 100%;
-  height: 95vh;
+  height: 80vh;
   background: linear-gradient(to bottom right, #24eded, #1063ff);
   display: flex;
   align-items: center;
@@ -13,7 +13,7 @@
   .shadowBox {
     background-color: black;
     width: 100%;
-    height: 95vh;
+    height: 80vh;
     position: absolute;
     z-index: 6;
   }
